# dwallpaper

./: Cargo.toml  README.md
scripts/: update_wallpaper.sh  wallpaper.service  wallpaper.timer
src/: main.rs
