[package]
name = "dwallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
roxmltree = "0.14"
regex = "1.5"
